--- a/rustyhack-mmo.html
+++ b/rustyhack-mmo.html
@@ -18,28 +18,28 @@
             <div class="col-sm-8 col-md-8 portfolio-block">
                 <div class="owl-carousel portfolio-page-carousel">
                     <div class="item">
-                        <img src="img/portfolio/rustyhack-logo.png" alt="Rustyhack MMO Logo" />
+                        <img src="img/portfolio/rustyhack-logo.png" alt="Rustyhack MMO Logo"/>
                     </div>
                     <div class="item">
-                        <img src="img/portfolio/full/rustyhack_screenshot_1.png" alt="Rustyhack MMO Screenshot 1" />
+                        <img src="img/portfolio/full/rustyhack_screenshot_1.png" alt="Rustyhack MMO Screenshot 1"/>
                     </div>
                     <div class="item">
-                        <img src="img/portfolio/full/rustyhack_screenshot_2.png" alt="Rustyhack MMO Screenshot 2" />
+                        <img src="img/portfolio/full/rustyhack_screenshot_2.png" alt="Rustyhack MMO Screenshot 2"/>
                     </div>
                 </div>
 
                 <script type="text/javascript">
-                    jQuery(document).ready(function($){
-                        $('.portfolio-page-carousel').imagesLoaded(function(){
+                    jQuery(document).ready(function ($) {
+                        $('.portfolio-page-carousel').imagesLoaded(function () {
                             $('.portfolio-page-carousel').owlCarousel({
-                                smartSpeed:1200,
+                                smartSpeed: 1200,
                                 items: 1,
                                 loop: true,
                                 dots: true,
                                 nav: true,
                                 navText: false,
                                 margin: 10,
-                                autoHeight:true
+                                autoHeight: true
                             });
                         });
                     });
@@ -54,11 +54,13 @@
                     </div>
                     <ul class="project-general-info">
                         <li><p><i class="fa fa-user"></i> Paul Bellchambers</p></li>
-                        <li><p><i class="fa fa-globe"></i> <a href="https://github.com/pbellchambers/rustyhack-mmo" target="_blank">rustyhack-mmo on GitHub</a></p></li>
+                        <li><p><i class="fa fa-globe"></i> <a href="https://github.com/pbellchambers/rustyhack-mmo"
+                                                              target="_blank">rustyhack-mmo on GitHub</a></p></li>
                         <li><p><i class="fa fa-calendar"></i> 2022</p></li>
                     </ul>
 
-                    <p class="text-justify">A barebones game that is a cross between an ASCII "roguelike" and MMORPG / MUD. Written in Rust, primarily for the purpose of learning the language.</p>
+                    <p class="text-justify">A barebones game that is a cross between an ASCII "roguelike" and MMORPG /
+                        MUD. Written in Rust, primarily for the purpose of learning the language.</p>
                     <!-- /Project Description -->
 
                     <!-- Technology -->
