--- a/winebrewdb.html
+++ b/winebrewdb.html
@@ -18,34 +18,34 @@
             <div class="col-sm-8 col-md-8 portfolio-block">
                 <div class="owl-carousel portfolio-page-carousel">
                     <div class="item">
-                        <img src="img/portfolio/full/winebrewdb-logo.png" alt="WineBrewDB Logo" />
+                        <img src="img/portfolio/full/winebrewdb-logo.png" alt="WineBrewDB Logo"/>
                     </div>
                     <div class="item">
-                        <img src="img/portfolio/full/winebrewdb1.png" alt="WineBrewDB Screenshot 1" />
+                        <img src="img/portfolio/full/winebrewdb1.png" alt="WineBrewDB Screenshot 1"/>
                     </div>
                     <div class="item">
-                        <img src="img/portfolio/full/winebrewdb2.png" alt="WineBrewDB Screenshot 2" />
+                        <img src="img/portfolio/full/winebrewdb2.png" alt="WineBrewDB Screenshot 2"/>
                     </div>
                     <div class="item">
-                        <img src="img/portfolio/full/winebrewdb3.png" alt="WineBrewDB Screenshot 3" />
+                        <img src="img/portfolio/full/winebrewdb3.png" alt="WineBrewDB Screenshot 3"/>
                     </div>
                     <div class="item">
-                        <img src="img/portfolio/full/winebrewdb4.png" alt="WineBrewDB Screenshot 4" />
+                        <img src="img/portfolio/full/winebrewdb4.png" alt="WineBrewDB Screenshot 4"/>
                     </div>
                 </div>
 
                 <script type="text/javascript">
-                    jQuery(document).ready(function($){
-                        $('.portfolio-page-carousel').imagesLoaded(function(){
+                    jQuery(document).ready(function ($) {
+                        $('.portfolio-page-carousel').imagesLoaded(function () {
                             $('.portfolio-page-carousel').owlCarousel({
-                                smartSpeed:1200,
+                                smartSpeed: 1200,
                                 items: 1,
                                 loop: true,
                                 dots: true,
                                 nav: true,
                                 navText: false,
                                 margin: 10,
-                                autoHeight:true
+                                autoHeight: true
                             });
                         });
                     });
@@ -60,11 +60,13 @@
                     </div>
                     <ul class="project-general-info">
                         <li><p><i class="fa fa-user"></i> Paul Bellchambers</p></li>
-                        <li><p><i class="fa fa-globe"></i> <a href="https://github.com/pbellchambers/winebrewdb" target="_blank">WineBrewDB on GitHub</a></p></li>
+                        <li><p><i class="fa fa-globe"></i> <a href="https://github.com/pbellchambers/winebrewdb"
+                                                              target="_blank">WineBrewDB on GitHub</a></p></li>
                         <li><p><i class="fa fa-calendar"></i> 2012</p></li>
                     </ul>
 
-                    <p class="text-justify">A tool for keeping track of wine homebrewing. Features include brew logs, recipes, useful calculators, storing images, and export to pdf.</p>
+                    <p class="text-justify">A tool for keeping track of wine homebrewing. Features include brew logs,
+                        recipes, useful calculators, storing images, and export to pdf.</p>
                     <!-- /Project Description -->
 
                     <!-- Technology -->
