chore: update versions of libraries

--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
 
-    <script src="js/modernizr.custom.js"></script>
+    <script src="js/modernizr-custom.js"></script>
 </head>
 
 <body class="page">
@@ -126,7 +126,7 @@
     </div>
 </div>
 
-<script src="js/jquery-3.5.1.min.js"></script>
+<script src="js/jquery-3.6.1.min.js"></script>
 <script src="js/imagesloaded.pkgd.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src='js/jquery.shuffle.min.js'></script>
