--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
 
-    <script src="js/modernizr.custom.js"></script>
+    <script src="js/modernizr-custom.js"></script>
 </head>
 
 <body class="page">
@@ -502,33 +502,35 @@
                 </div>
             </div>
         </div>
+
+        <!-- Footer -->
+        <footer class="site-footer clearfix">
+            <div class="footer-social">
+                <ul class="footer-social-links">
+                    <li>
+                        <a href="https://uk.linkedin.com/in/pbellchambers" target="_blank"><i
+                                class="lni lni-linkedin-original"></i> Linkedin</a>
+                    </li>
+
+                    <li>
+                        <a href="https://github.com/pbellchambers" target="_blank"><i
+                                class="lni lni-github-original"></i>
+                            GitHub</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="footer-copyrights">
+                <p>© 2022 All rights reserved. Paul Bellchambers.</p>
+            </div>
+        </footer>
+        <!-- /Footer -->
+
     </div>
-
-    <!-- Footer -->
-    <footer class="site-footer clearfix">
-        <div class="footer-social">
-            <ul class="footer-social-links">
-                <li>
-                    <a href="https://uk.linkedin.com/in/pbellchambers" target="_blank"><i
-                            class="lni lni-linkedin-original"></i> Linkedin</a>
-                </li>
-
-                <li>
-                    <a href="https://github.com/pbellchambers" target="_blank"><i class="lni lni-github-original"></i>
-                        GitHub</a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="footer-copyrights">
-            <p>© 2022 All rights reserved. Paul Bellchambers.</p>
-        </div>
-    </footer>
-    <!-- /Footer -->
 
 </div>
 
-<script src="js/jquery-3.5.1.min.js"></script>
+<script src="js/jquery-3.6.1.min.js"></script>
 <script src="js/imagesloaded.pkgd.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src='js/jquery.shuffle.min.js'></script>
