chore: update files

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                                     deliver business value as soon as possible.</p>
 
                                                 <div class="home-buttons">
-                                                    <a href="CV - Paul Bellchambers - 202208.pdf" target="_blank"
+                                                    <a href="CV - Paul Bellchambers - 202209.pdf" target="_blank"
                                                        class="btn btn-primary">Download CV</a>
                                                     <a href="contact.html" target="_self" class="btn btn-secondary">Contact</a>
                                                 </div>
@@ -479,7 +479,7 @@
                                 <div class="lm-info-block gray-default">
                                     <i class="lni lni-users"></i>
                                     <h4>Largest team of engineers hired and managed</h4>
-                                    <span class="lm-info-block-value">38</span>
+                                    <span class="lm-info-block-value">40+</span>
                                     <span class="lm-info-block-text"></span>
                                 </div>
                             </div>
