--- a/resume.html
+++ b/resume.html
@@ -108,11 +108,11 @@
                                     <div class="timeline-item clearfix">
                                         <h5 class="item-period current">2019 - 2022</h5>
                                         <span class="item-company">JP Morgan Chase (Chase UK Bank)</span>
-                                        <h4 class="item-title">QA Chapter Lead - Vice President</h4>
+                                        <h4 class="item-title">Head of QA - Vice President</h4>
                                         <p>Built and launched a brand new bank from scratch. From before the first line
                                             of code was written, to launch and beyond. Defined and implemented the
                                             testing strategy and quality best practices for the bank. Built from
-                                            scratch, and leading a chapter of over 35 QA across 20+ globally distributed
+                                            scratch, and leading a chapter of over 40 QA across 20+ globally distributed
                                             scrum teams. Built and implemented mobile (Appium) and microservice test
                                             automation frameworks. Elected, for a term of 3 years, to represent UK
                                             employees on the JP Morgan employee forum.</p>
@@ -132,7 +132,7 @@
                                     <div class="timeline-item clearfix">
                                         <h5 class="item-period ">2015 - 2018</h5>
                                         <span class="item-company">ClearScore</span>
-                                        <h4 class="item-title">Test Lead</h4>
+                                        <h4 class="item-title">Head of QA</h4>
                                         <p>Built, mentored, and led a team of testers spread across multiple scrum
                                             teams, as well as being scrum master for one team. Spearheaded the entire
                                             testing function from inception before launch to date. Created and
